--- a/PeggleClone/.swiftlint.yml
+++ b/PeggleClone/.swiftlint.yml
@@ -77,6 +77,7 @@ disabled_rules:
   - multiple_closures_with_trailing_closure # for e.g. SwiftUI buttons
   - todo
   - type_name
+  - inclusive_language # This is kind of ridiculous, prevents me from using PeggleMaster as a class name
 
 line_length:
   warning: 120
